ffmpeg: depends SSL

--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2014-08-13 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.3.2
 
