--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-07-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, DEPENDS, CONFIGURE: version 0.4.1
 
