--- a/video/mythtv/HISTORY
+++ b/video/mythtv/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-03-09 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 0.26.0
 	* CONFIGURE: removed query for OSS
