--- a/video/xbmc/HISTORY
+++ b/video/xbmc/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-06-06 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 13.1 Gotham
 
