--- a/x11/gkrellm2/HISTORY
+++ b/x11/gkrellm2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-02-17 Robin Cook <rcook@wyrms.net>
 	* PRE_BUILD: apply gentoo patches to build with newer glib2
 
