x11vnc: depends SSL

--- a/x11/x11vnc/HISTORY
+++ b/x11/x11vnc/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-07-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added not strictly required, but highly recommended libxtst
 	  dependency
