--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2014-08-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.8.6, SECURITY_PATCH=6
 	* PRE_BUILD, boost.patch: patch removed
