xorg-server: depends SSL

--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
