--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+	* crypto/libressl: added SSL/TLS library
+
 2014-08-11 Pol Vinogradov <vin.public@gmail.com>
 	* disk/whdd: new spell, a HDD diagnostic and recovery tool for Linux
 
