qt4 - fix ssl gflags

--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,6 +1,6 @@
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
-
+	  fix openssl flags
         * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
 
 2014-08-01 Ladislav Hagara <hgr@vabo.cz>
