libssh - fix build with libressl

--- a/collab/openldap/HISTORY
+++ b/collab/openldap/HISTORY
@@ -1,6 +1,6 @@
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
-
+	* CONFIGURE: fix
         * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
 
 2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
