pulseaudio - openssl => SSL

--- a/audio-drivers/pulseaudio/HISTORY
+++ b/audio-drivers/pulseaudio/HISTORY
@@ -1,3 +1,5 @@
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: openssl => SSL
 2014-06-09 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: 5.0
 	* DEPENDS: fix UDEV, gtk+2 => gtk+3, add fftw, remove hal, add orc
