--- a/libs/podofo/HISTORY
+++ b/libs/podofo/HISTORY
@@ -1,5 +1,6 @@
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
+	* DETAILS: version 0.9.3
 
 2013-06-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: lua is optional
