cupos - fix SSL

--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,5 +1,6 @@
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
+	  fix ssl
 
 2014-07-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.4
