--- a/antivirus/clamav/HISTORY
+++ b/antivirus/clamav/HISTORY
@@ -1,3 +1,7 @@
+2014-08-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.98.3
+	* DEPENDS: add SSL
+
 2014-05-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.98.3
 
