--- a/devel/python3/HISTORY
+++ b/devel/python3/HISTORY
@@ -1,3 +1,6 @@
+2014-08-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add SSL
+
 2014-05-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.4.1
 
