--- a/crypto/krb5/HISTORY
+++ b/crypto/krb5/HISTORY
@@ -2,6 +2,7 @@
 	* DETAILS: version 1.12.2
 	  SECURITY_PATCH++
 	  fixes CVE-2014-4342 CVE-2014-4341 CVE-2014-4343 CVE-2014-4344 CVE-2014-4345
+	* DEPENDS: openssl => SSL
 
 2014-08-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.12.1
