--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2014-08-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.7
+
 2014-07-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.4
 
