--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2014-08-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.58
+
 2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.54
 
