--- a/xorg-app/appres/HISTORY
+++ b/xorg-app/appres/HISTORY
@@ -1,3 +1,6 @@
+2014-08-21 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.0.4
+
 2009-09-24 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
 	* DETAILS: updated spell to 1.0.2
 
