--- a/python-pypi/arandr/HISTORY
+++ b/python-pypi/arandr/HISTORY
@@ -1,2 +1,6 @@
+2014-08-21 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.1.7.1
+	* DEPENDS: Add dependency on python
+
 2012-06-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, DEPENDS: spell created, version 0.1.6
