--- a/crypto/libgcrypt/HISTORY
+++ b/crypto/libgcrypt/HISTORY
@@ -1,3 +1,6 @@
+2014-08-22 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.6.2
+
 2014-02-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.1
 	  SECURITY_PATCH++ fixes CVE-2013-4242
