--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-22  Ismael Luceno <ismael@sourcemage.org>
+	* xorg-util/zarfy: new spell, A gui to libxrandr
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
 	* crypto/libressl: added SSL/TLS library
 
