--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-22 Vlad Glagolev <stealth@sourcemage.org>
+	* audio-soft/wavegain: new spell, wav files loudness normalizer
+
 2014-08-22  Ismael Luceno <ismael@sourcemage.org>
 	* xorg-util/zarfy: new spell, A gui to libxrandr
 
