--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,7 +1,11 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-08-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.32 (stable); SECURITY_PATCH++
+	  (CVE-2014-2497, CVE-2014-3538, CVE-2014-3587, CVE-2014-3597,
+	  CVE-2014-4670, CVE-2014-4698, CVE-2014-5120)
 
-        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
 
 2014-08-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.3.29 (previous); SECURITY_PATCH++
