--- a/archive-libs/libarchive/HISTORY
+++ b/archive-libs/libarchive/HISTORY
@@ -1,3 +1,6 @@
+2014-08-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: fix typo
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
