--- a/crypto/libssh2/HISTORY
+++ b/crypto/libssh2/HISTORY
@@ -1,7 +1,10 @@
+2014-08-23 Ismael Luceno <ismael@sourcemage.org>
+	* CONFIGURE, DEPENDS: Allow the use of libressl
+
 2013-01-20 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFIGURE: added, allow choice of openssl, libgcrypt
 	* DEPENDS: use chosen crypto library
-	
+
 2012-12-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.3
 
