--- a/science-libs/glpk/HISTORY
+++ b/science-libs/glpk/HISTORY
@@ -1,3 +1,7 @@
+2014-08-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.55
+	* DEPENDS: fix gmp flags
+
 2011-10-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.47
 
