--- a/libs/upower/HISTORY
+++ b/libs/upower/HISTORY
@@ -1,3 +1,6 @@
+2014-08-22  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.99.1
+
 2013-10-19  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.23
 
