--- a/ftp/curl/HISTORY
+++ b/ftp/curl/HISTORY
@@ -1,3 +1,6 @@
+2014-08-23  Treeve Jelbert <treeve@sourcemage.org>
+        * CONFIGURE, DEPENDS, BUILD: also support libressl, cleanup
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
