wget - imporve libressl detection

--- a/ftp/wget/HISTORY
+++ b/ftp/wget/HISTORY
@@ -1,3 +1,7 @@
+2014-08-23  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS, CONFIGURE: fix libressl support
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: tweak
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
