--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,6 @@
+2014-08-23  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS, CONFIGURE: improve SSL/gnutls choice - remive obsolete flags
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 	  fix ssl
