--- a/net/wpa_supplicant/HISTORY
+++ b/net/wpa_supplicant/HISTORY
@@ -1,3 +1,6 @@
+2014-08-23 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Allow the use of libressl
+
 2012-12-31 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD, INSTALL: dbus service patching isn't required for 1.1;
 	  fixed build
