--- a/utils/acpid2/HISTORY
+++ b/utils/acpid2/HISTORY
@@ -1,5 +1,5 @@
-2014-06-04 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.0.22
+2014-08-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.0.23
 
 2013-09-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0.20
