gutenprint - fix spurious dependencies

--- a/printer/gutenprint/HISTORY
+++ b/printer/gutenprint/HISTORY
@@ -1,3 +1,8 @@
+2014-08-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: temove spurious gnutls check
+	* BUILD: force LDFLAGS="-Wl,--as-needed"
+	  this previous misleading references to gnutls/openssl, which are inherited from cups
+
 2014-05-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.2.10
 
