--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: fix bad with-SSL usage
+
 2014-08-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.32 (stable); SECURITY_PATCH++
 	  (CVE-2014-2497, CVE-2014-3538, CVE-2014-3587, CVE-2014-3597,
