--- a/security-libs/opencryptoki/HISTORY
+++ b/security-libs/opencryptoki/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: fix bad with-SSL usage
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
