disk/attr: fix library permissions

--- a/disk/attr/HISTORY
+++ b/disk/attr/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD, INSTALL: fix library permissions
+
 2013-06-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.4.47
 	* attr.gpg: add 0542DF34 Brandon Philips <brandon@ifup.co>
