--- a/disk/attr/INSTALL
+++ b/disk/attr/INSTALL
@@ -1,3 +1,4 @@
 make_single &&
 make install install-lib install-dev &&
-make_normal
+make_normal &&
+chmod 0755 ${INSTALL_ROOT}/lib/libattr.so.*.*.*
