xorg-proto/fontsproto: add missing SOURCE_HASH

--- a/xorg-proto/fontsproto/HISTORY
+++ b/xorg-proto/fontsproto/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: add missing SOURCE_HASH
+
 2014-06-07  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.1.3
 
