--- a/graphics-libs/mesalib-1x/HISTORY
+++ b/graphics-libs/mesalib-1x/HISTORY
@@ -1,3 +1,6 @@
+2014-08-23 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: version 10.2.6
+
 2014-08-11 Sukneet Basuta <sukneet@sourcemage.org>
 	* PRE_BUILD, gl_select.patch: added to install GL headers and libs
 	  to correct path for smgl-gl_select
