mesalib-1x: make it build (including Gallium drivers)

--- a/graphics-libs/mesalib-1x/HISTORY
+++ b/graphics-libs/mesalib-1x/HISTORY
@@ -1,3 +1,11 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* BUILD, CONFIGURE: Change driver selection and make this beast build.
+	  It is not perfect, but results in a working build including r600 and
+	  nouveau drivers for me.
+	* PRE_BUILD, mesa-10.0-nv50-fix-build.patch: Remove typeid usage since
+	  RTTI just won't work for us (another way would be to hack enforced NDEBUG
+	  where it belongs).
+
 2014-08-23 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: version 10.2.6
 
