nv: bump to 2.1.20, build fix

--- a/xorg-driver/xf86-video-nv/HISTORY
+++ b/xorg-driver/xf86-video-nv/HISTORY
@@ -1,3 +1,7 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated to 2.1.20 (removed sig)
+	* PRE_BUILD: provide fake mibstore.h
+
 2010-09-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 2.1.18
 	  SOURCE matches upstream posted SHA1
