nouveau: build fix for autogen hack

--- a/xorg-driver/xf86-video-nouveau/HISTORY
+++ b/xorg-driver/xf86-video-nouveau/HISTORY
@@ -1,3 +1,7 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD: prevent shell syntax destruction by removal
+	  of conditional body, providing eternal truth instead
+
 2010-04-26 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on libdrm with nouveau API enabled
 
