--- a/xorg-driver/xf86-video-mga/HISTORY
+++ b/xorg-driver/xf86-video-mga/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to 1.6.3 (removed sig)
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
