nss: fixup, also new PEM; spell still a mess

--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,9 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD: fixup of default branch with PEM
+	* nss-pem-20140808.tar.bz2: new PEM from
+	  https://git.fedorahosted.org/git/nss-pem.git
+	* INSTALL: fix path for nss-config in 3.15.5
+
 2014-07-22 Treeve Jelbert <treeve@sourcemage.org>
 	* PRE_BUILD: fix 3.16 aptching
 
