--- a/crypto/nss/INSTALL
+++ b/crypto/nss/INSTALL
@@ -31,7 +31,7 @@ install -v -m755 */bin/* $INSTALL_ROOT/usr/bin &&
 if [[ $NSS_BRANCH == "3.16" ]]; then
   install -v -m755 ../nss/config/nss-config $INSTALL_ROOT/usr/bin
 elif [[ $NSS_BRANCH == "3.15" ]]; then
-  install -v -m755 ../security/nss/cmd/disttools/nss-config $INSTALL_ROOT/usr/bin
+  install -v -m755 ../nss/config/nss-config $INSTALL_ROOT/usr/bin
 fi &&
 
 install -v -d -m755 $INSTALL_ROOT/usr/include/nss &&
