freeglut: fix deps for mesalib-1x

--- a/graphics-libs/freeglut/HISTORY
+++ b/graphics-libs/freeglut/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: separate glu for mesalib-1x
+
 2014-05-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: major cleanup
 
