--- a/x11-toolkits/wxgtk/HISTORY
+++ b/x11-toolkits/wxgtk/HISTORY
@@ -1,3 +1,6 @@
+2014-04-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: ... and when MESALIB is mesalib-1x, depends on glu
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
