cairo: build fix

--- a/x11-libs/cairo/HISTORY
+++ b/x11-libs/cairo/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD, cairo-broken-lto-build.patch: a build fix, bad relocation
+
 2014-07-04 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS, PRE_BUILD, PREPARE, PRE_BUILD, PRE_SUB_DEPENDS,
 	  REPAIR^all^PRE_SUB_DEPENDS, SUB_DEPENDS: added scm branch
