glamor: depends MESALIB

--- a/xorg-driver/glamor/HISTORY
+++ b/xorg-driver/glamor/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: MESALIB
+
 2014-01-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.6.0
 	  this is probably the last satndalone release
