net-tools: fix build by disabling obsolete hardware

--- a/net/net-tools/HISTORY
+++ b/net/net-tools/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* CONFIGURE, BUILD: disable STRIP and Token Ring lacking kernel support
+
 2009-09-30 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS: use INITSCRIPTS provider
 
