tcp_wrappers: PIC build

--- a/net/tcp_wrappers/HISTORY
+++ b/net/tcp_wrappers/HISTORY
@@ -1,3 +1,7 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* BUILD: enforce PIC on x86-64 to enable other spells to include
+	  libwrap.a in dynamic libs, which does happen and fails otherwise
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
