--- a/editors/gawk/HISTORY
+++ b/editors/gawk/HISTORY
@@ -1,3 +1,8 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* BUILD: reduce usage of libraries to prevent failure of spell
+	  upgrades (example: awk broken when updating gmp, sorcery cannot complete
+	  when awk cannot run due to temporarily missing libgmp)
+
 2014-04-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.1.1
 
