llvm: make build more likely, enable non-x86 targets

--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,9 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: disable TMPFS, as build needs 5 GiB on disk, plus actual RAM for
+	  compiling
+	* DEPENDS: swig
+	* BUILD: remove restriction of targets to X86
+
 2014-06-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.4.2
 	* PRE_BUILD, gcc-4.9.patch: not needed
