--- a/disk/lvm/HISTORY
+++ b/disk/lvm/HISTORY
@@ -1,3 +1,8 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: 2.02.109
+	* lvm-static-hotfix.patch, PRE_BUILD: dirty hack to link missing libs
+	  to static build (was needed on a fresh install, not sure why broken now)
+
 2013-08-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.02.100
 
