screen: bump to 4.2.1

--- a/shell-term-fm/screen/HISTORY
+++ b/shell-term-fm/screen/HISTORY
@@ -1,3 +1,7 @@
+2014-08-09 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to 4.2.1!
+	  (now hopefully supporting TERM=rxvt-unicode-256color)
+
 2008-08-22 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: prevented the link against libelf, it's not needed.
