--- a/libs/libconfig/HISTORY
+++ b/libs/libconfig/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: C++
+
 2013-02-14 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.4.9
 
