libiec61883: hash changed

--- a/video-libs/libiec61883/HISTORY
+++ b/video-libs/libiec61883/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: hash sum changed, no old source to compare:-/
+
 2009-12-15 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed to working SOURCE_URL[0]
 
