--- a/audio-drivers/jack2/HISTORY
+++ b/audio-drivers/jack2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated spell to 1.9.10
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
