--- a/audio-libs/lv2/HISTORY
+++ b/audio-libs/lv2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* INSTALL: pre-create directory
+
 2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS, INSTALL: spell created
 	* CONFLICTS: replaces lv2core
