--- a/audio-libs/slv2/HISTORY
+++ b/audio-libs/slv2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: depend on lv2 instead of lv2core
+
 2011-10-22 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: Updated to 0.6.6.
 
