lilv-0: fail-safe cleanup before install

--- a/audio-libs/lilv-0/INSTALL
+++ b/audio-libs/lilv-0/INSTALL
@@ -1,4 +1,4 @@
 ./waf install --destdir=".pre-install" &&
-rm -rv .pre-install/usr/{bin,etc,share/man} &&
+rm -rvf .pre-install/usr/{bin,etc,share/man} &&
 # cp -a complains about inability to preserve times for symlinks
 cp -rv .pre-install/* "$INSTALL_ROOT/"
