--- a/e-17/eina/HISTORY
+++ b/e-17/eina/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+       * DETAILS: Updated to 1.7.10 (removed guru sig)
+
 2013-07-30 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.7.8
 
