garcon: more depends

--- a/xfce/garcon/HISTORY
+++ b/xfce/garcon/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: libxfce4util
+
 2013-06-14 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.2.1
 	  SOURCE matches upstream posted SHA1
