--- a/xfce/libxfce4util/HISTORY
+++ b/xfce/libxfce4util/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: intltool
+
 2013-06-14 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 4.10.1
 	  SOURCE matches upstream posted SHA1
