aubio03: historic version of spell for ardour2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@souremage.org>
+	* audio-libs/aubio03: old copy of aubio for ardour2
+
 2014-08-22 Vlad Glagolev <stealth@sourcemage.org>
 	* audio-soft/wavegain: new spell, wav files loudness normalizer
 
