ardour2: keep spell working

--- a/audio-creation/ardour2/HISTORY
+++ b/audio-creation/ardour2/HISTORY
@@ -1,3 +1,8 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	DEPENDS, PRE_BUILD, BUILD, INSTALL: Keep it building with old version
+	of aubio, fixed lv2 dep. Note for the future: Ardour 2 is not obsoleted by
+	Ardour 3! Import of old sessions in the latter is not lossless, sadly.
+
 2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD, ardour-2.8.16-lilv16.patch: build fix from
 	  https://abf.rosalinux.ru/openmandriva/ardour/raw/master/ardour-2.8.16-lilv16.patch
