--- a/audio-creation/audacity/HISTORY
+++ b/audio-creation/audacity/HISTORY
@@ -1,3 +1,7 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to 2.0.5
+	* DEPENDS: use AUDACITY_UNI for unicode decision
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
