swh-plugins: fix with current autotools

--- a/audio-plugins/swh-plugins/HISTORY
+++ b/audio-plugins/swh-plugins/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD: fix build with current autotools
+
 2014-03-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* swh-plugins-nosetlocale.patch: add missing file
 
