--- a/audio-soft/sox/HISTORY
+++ b/audio-soft/sox/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD: add a define missing from current ffmpeg
+
 2013-02-17 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 14.4.1
 
