--- a/disk/cdrtools/HISTORY
+++ b/disk/cdrtools/HISTORY
@@ -1,3 +1,7 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated spell to 3.01a24, switch URL to Sourceforge
+	* PRE_BUILD: fix man path
+
 2014-05-08 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 3.01a23
 
