xcdroast: bump to 0.98alpha16, include patches

--- a/disk/xcdroast/HISTORY
+++ b/disk/xcdroast/HISTORY
@@ -1,3 +1,9 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: version 0.98alpha16
+	* PRE_BUILD, io_progressbar_fix.patch, cdd2wav_version.patch: upstream
+	  patches
+	* modern_cdrtools.patch: removed
+
 2012-01-24 Ismael Luceno <ismael.luceno@gmail.com>
 	* DEPENDS: depend on CD-BURN-UTILITY instead of cdrtools.
 
