lightdm: bump to 1.8.0

--- a/x11/lightdm/HISTORY
+++ b/x11/lightdm/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated to 1.8.0 (removed sig)
+
 2013-06-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.7.0, 1.5.1 no longer compiles
 	* DEPENDS: Optionally depends on gettext
