evince: needs symbolic icons

--- a/doc/evince/HISTORY
+++ b/doc/evince/HISTORY
@@ -1,3 +1,6 @@
+2014-04-18 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: need symbolic icons
+
 2013-07-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.8.3
 
