--- a/audio-players/xmms2/HISTORY
+++ b/audio-players/xmms2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
+	CONFIGURE, DEPENDS: always build with CDDA (breaks otherwise)
+
 2011-10-31 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
 	* DETAILS: updated spell to 0.8DrO_o
 	* PRE_BUILD: no more patching
