--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2014-08-25 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.2.17 and 3.1.26
+
 2014-07-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 3.2.16
 	* DEPENDS: add gettext, remove lzo
