--- a/utils/file/HISTORY
+++ b/utils/file/HISTORY
@@ -1,3 +1,6 @@
+2014-08-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.19
+
 2014-03-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.18
 
