--- a/collab/cola/HISTORY
+++ b/collab/cola/HISTORY
@@ -1,67 +1,4 @@
-2012-02-08 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.7.5 (added SPELLX for source rename)
-	* INSTALL: removed uneeded sed edit
-
-2011-11-15 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.7.0 (fixed SOURCE_URL[0])
-
-2011-10-04 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.3.5
-
-2011-06-03 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.3.4
-
-2011-04-15 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.3.2
-
-2011-03-26 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.3.1
-
-2011-01-27 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.3
-
-2010-10-21 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.2.5
-
-2010-09-02 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.2.4
-
-2010-08-02 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.2.3
-
-2010-05-23 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.2.1
-
-2010-04-26 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: Fixed SOURCE
-	  updated spell to 1.4.2
-
-2009-12-15 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.1.1
-
-2009-12-07 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.1
-
-2009-11-19 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.0.5
-
-2009-11-07 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.0.2
-
-2009-11-01 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.0.1
-
-2009-10-28 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: updated spell to 1.4.0
-
-2009-09-17 Bor Kraljic <pyrobor@ver.si>
-	* DEPENDS: added optional_depends for pyinotify
-	* INSTALL: changed to use default_python_install
-	  added sedit to change prefix to /usr
-	* BUILD: changed to use default_python_build
-	* DETAILS: Fixed SOURCE
-	  updated spell to 1.3.9.14
-
-2008-08-01 George Sherwood <gsherwood@sourcemage.org>
-	* DEPENDS, DETAILS, BUILD, INSTALL: spell created
-
+2014-08-26  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0
+	  PATCHLEVEL=9999
+	  spell deprecated [replaced by git-cola]
