xf86-video-intel: bump to 2.99.911 and ignore mesalib mess (HACK)

--- a/xorg-driver/xf86-video-intel/HISTORY
+++ b/xorg-driver/xf86-video-intel/HISTORY
@@ -1,3 +1,10 @@
+2014-08-27 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: removed mesalib references, relying on configure as things
+	  get too complicated with two mesalib spells of which one is the only
+	  proper alternative
+	* DETAILS: required bump to 2.99.911 (old version fails because of
+	  XDamage changes, apparently)
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
