--- a/libs/libva/HISTORY
+++ b/libs/libva/HISTORY
@@ -1,3 +1,9 @@
+2014-08-27 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: version 1.3.1
+	* DEPENDS: more of them, with options
+	* PRE_BUILD: re-create broken configure script which makes wayland-less
+	  build impossible
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
