--- a/graphics-libs/libva-intel-driver/HISTORY
+++ b/graphics-libs/libva-intel-driver/HISTORY
@@ -1,3 +1,7 @@
+2014-08-27 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: version 1.3.2
+	* PRE_BUILD: fixup b0rked configure (enable wayland-less build)
+
 2013-10-07 Jeremy Blosser <jblosser@sourcemage.org>
 	* DETAILS, DEPENDS: spell created
 
