xorg-server: really needs mesalib-1x

--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,7 @@
+2014-08-27 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: really needs mesalib-1x ... so actually the old mesalib
+	  spell is obsolete, what's the plan?
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: needs xcb cruft to build
 
