--- a/disk/davfs/HISTORY
+++ b/disk/davfs/HISTORY
@@ -1,3 +1,9 @@
+2014-08-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.5.2; converted to upstream signature
+	  checking; quoted paths
+	* davfs.gpg: added gpg keyring - 99D2A26E public key (Werner Baumann
+	  (wbaumann) <werner.baumann@onlinehome.de>)
+
 2014-04-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.5.0
 
