subversion: bump to 1.8.10 (1.8.9 source already unavailable)

--- a/collab/subversion/HISTORY
+++ b/collab/subversion/HISTORY
@@ -1,3 +1,6 @@
+2014-08-27 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: version 1.8.10 ... They pulled the tarball already!
+
 2014-05-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.8.9
 
