--- a/audio-drivers/jack2/HISTORY
+++ b/audio-drivers/jack2/HISTORY
@@ -1,3 +1,7 @@
+2014-08-26 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: needs libsamplerate
+	* DETAILS: scm=git
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 1.9.10
 
