firefox: fix build with gcc-4.9 (on a core2 64 bit machine with PIC CFLAGS, if          that matters ... did not need that on an Athlon II X3 machine with          "native" archspecs)

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-08-28 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD, bug999496_change1f10a8067853.patch: fix build with gcc 4.9
+
 2014-07-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, BUILD, CONFIGURE, PRE_BUILD, Makefile.in-pgo.patch:
 	  add option for profiled build
