--- a/x11-libs/cairo/HISTORY
+++ b/x11-libs/cairo/HISTORY
@@ -1,3 +1,6 @@
+2014-08-26 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: xextproto
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD, cairo-broken-lto-build.patch: a build fix, bad relocation
 
