--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,8 @@
+2014-08-28 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: some PYTHON is always needed now to avoid failure during
+	  INSTALL (for a dbus codegen tool, also the modular-tests option
+	  doesn't exist anymore)
+
 2014-08-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.41.2
 
