--- a/graphics-libs/glew/HISTORY
+++ b/graphics-libs/glew/HISTORY
@@ -1,3 +1,6 @@
+2014-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.11.0
+
 2013-07-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.10.0
 
