--- a/x11-toolkits/wxgtk-new/HISTORY
+++ b/x11-toolkits/wxgtk-new/HISTORY
@@ -1,3 +1,6 @@
+2014-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.0.1
+
 2013-10-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 2.9.5
 
