--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,6 @@
+2014-08-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.13
+
 2014-06-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.12
 
