--- a/libs/tzdata/HISTORY
+++ b/libs/tzdata/HISTORY
@@ -1,3 +1,6 @@
+2014-08-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2014g
+
 2014-06-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2014e
 	  use upstream signature
