--- a/printer/ghostscript/HISTORY
+++ b/printer/ghostscript/HISTORY
@@ -1,3 +1,8 @@
+2014-08-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 9.14
+	* DEPENDS: remove obsolete cups option
+	* PRE_BUILD: remove some more embedded libraries
+
 2013-09-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 9.10
 
