sdcc: new spell, Small Device C Compiler

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2014-08-31  Ismael Luceno <ismael@sourcemage.org>
+	* devel/sdcc: new spell, Small Device C Compiler
 	* devel/mawk: new spell, Interpreter for the AWK Programming Language
 
 2014-08-24 Thomas Orgis <sobukus@souremage.org>
