--- a/python-pypi/psycopg2/HISTORY
+++ b/python-pypi/psycopg2/HISTORY
@@ -1,3 +1,6 @@
+2014-09-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.5.4
+
 2014-05-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.5.3
 
