--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,4 +1,7 @@
-2014-06-20 Treeve Jelbert <treeve@sourcemage.org>
+22014-09-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.10
+
+22014-06-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8
 	* PRE_BUILD: create 'input' group
 
