--- a/libs/libunistring/HISTORY
+++ b/libs/libunistring/HISTORY
@@ -1,2 +1,5 @@
+2014-09-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.4
+
 2011-09-22 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: spell created, version 0.9.3
