--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,9 @@
+2014-09-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.18.13
+	* CONFIGURE: removed obsolete options
+	* DEPENDS: removed obsolete dependencies: libffado, lastfm, libsoup;
+	  added missing dependencies: libmpdclient, gcc; updated TODO list
+
 2014-03-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.18.9
 
