--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,7 @@
+2014-09-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add krb5
+	* FINAL: specify default_final
+
 2014-08-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.5
 	  SECURITY_PATCH++, fix CVE-2014-5029/5030/5031
