--- a/net/tor/HISTORY
+++ b/net/tor/HISTORY
@@ -1,3 +1,6 @@
+2014-09-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: versions 0.2.5.6-alpha
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
