--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2014-09-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.16.4
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD: fixup of default branch with PEM
 	* nss-pem-20140808.tar.bz2: new PEM from
