firefox 32.0, SECURITY_PATCH=75

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,7 @@
+2014-09-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 32.0, SECURITY_PATCH=75
+	* PRE_BUILD, bug999496_change1f10a8067853.patch: patch removed
+
 2014-08-28 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD, bug999496_change1f10a8067853.patch: fix build with gcc 4.9
 
