--- a/devel/meld/HISTORY
+++ b/devel/meld/HISTORY
@@ -1,3 +1,6 @@
+2014-09-03 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.8.6
+
 2012-06-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.6.0
 
