--- a/php-pear/memcache/HISTORY
+++ b/php-pear/memcache/HISTORY
@@ -1,3 +1,6 @@
+2014-09-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.0.8
+
 2012-10-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.0.7
 
