--- a/net/tcpdump/HISTORY
+++ b/net/tcpdump/HISTORY
@@ -1,3 +1,6 @@
+2014-09-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.6.2
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
