--- a/devel/check/HISTORY
+++ b/devel/check/HISTORY
@@ -1,3 +1,6 @@
+2014-09-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.14
+
 2013-01-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.9.9
 
