--- a/utils/kbd/HISTORY
+++ b/utils/kbd/HISTORY
@@ -1,3 +1,9 @@
+2014-09-03 Treeve Jelbert <treeve@sourcemage.org
+	* DETAILS: version 2.0.2
+	  download from KERNEL_URL
+	* DEPENDS: add check, update flags
+	* *.patch, PRE_BUILD:: deleted
+
 2013-01-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* PRE_BUILD: apply the patch; quoting paths
