--- a/net/libreswan/HISTORY
+++ b/net/libreswan/HISTORY
@@ -1,3 +1,6 @@
+2014-09-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.10
+
 2014-07-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.9
 	* no-pam.patch: removed, fixed by upstream
