--- a/utils/consolekit/HISTORY
+++ b/utils/consolekit/HISTORY
@@ -1,3 +1,7 @@
+2014-09-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.6
+	* DEPENDS: --enable-pam-module
+
 2012-12-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: PATCH_LEVEL -> PATCHLEVEL
 
