--- a/mail/courier/HISTORY
+++ b/mail/courier/HISTORY
@@ -7,6 +7,9 @@
 2012-01-19 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFLICTS: added masqmail
 
+2011-04-02 Remko van der Vossen <wich@sourcemage.org>
+	* init.d/courier_filter: added
+
 2011-03-27 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: version 0.65.3
 	* init.d/*: simplified and use smgl_init (working NEEDS)
