--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,9 @@
+2014-09-04 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS: version 6.8.9-7
+
+2014-07-14 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS: version 6.8.9-5
+
 2014-04-27 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 6.8.9-0
 
