--- a/collab/subversion/HISTORY
+++ b/collab/subversion/HISTORY
@@ -1,3 +1,6 @@
+2014-09-04 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Fix dependency on serf (without the flag, it may be skipped)
+
 2014-08-27 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: version 1.8.10 ... They pulled the tarball already!
 
