--- a/shell-term-fm/mc/HISTORY
+++ b/shell-term-fm/mc/HISTORY
@@ -1,3 +1,6 @@
+2014-09-05 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.8.13
+
 2014-04-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.8.12
 	* PRE_BUILD, mc-4.8.11-ncurses_build_fix.patch: deleted
