--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,9 @@
+2014-09-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.5.0
+	  now uses .xz
+	* BUILD: force X86;R600 some of the others fail to link
+	* CONFLICTS: added
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: disable TMPFS, as build needs 5 GiB on disk, plus actual RAM for
 	  compiling
