--- a/database/postgresql/HISTORY
+++ b/database/postgresql/HISTORY
@@ -1,8 +1,15 @@
-2014-08-24  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: fix bad with-SSL usage
+2014-09-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 9.3.5; removed unsupported PGCluster
+	  patch
+	* PREPARE: complete deprecation
+	* DEPENDS: fixed SSL flags
+	* PRE_BUILD: removed
 
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-08-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: fix bad with-SSL usage
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-03-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 9.3.4
