--- a/libs/libtirpc/HISTORY
+++ b/libs/libtirpc/HISTORY
@@ -1,3 +1,6 @@
+2014-09-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.5
+
 2013-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fix SOURCE_URL[0]
 
