--- a/security-libs/linux-pam/HISTORY
+++ b/security-libs/linux-pam/HISTORY
@@ -1,3 +1,6 @@
+2014-09-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add libtirpc
+
 2014-09-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.8
 	  new website & url
