--- a/gnome2-apps/dia/HISTORY
+++ b/gnome2-apps/dia/HISTORY
@@ -1,3 +1,7 @@
+2014-09-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.97.3; fixed WEB_SITE
+	* glib-2.31.patch: removed, fixed by upstream
+
 2012-07-26 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: detect docbook-xsl man path and use instead of online one
 	* DEPENDS: added docbook-xsl required dep
