youtube-dl: update to youtube-dl-2014.09.04.3

--- a/utils/youtube-dl/HISTORY
+++ b/utils/youtube-dl/HISTORY
@@ -1,4 +1,5 @@
 2014-09-06 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: update to 2014.09.04.3
 	* DETAILS, INSTALL: Switch to versioned source files. Downside is that
 	  fallback mirrors need to add the version to the file name, too. Upside is
 	  that mirroring of specific versions to keep the stable grimoire working
