--- a/utils/youtube-dl/INSTALL
+++ b/utils/youtube-dl/INSTALL
@@ -1,2 +1,2 @@
 install -m 0755 -o root -g root $SOURCE_CACHE/$SOURCE \
-                                $INSTALL_ROOT/usr/bin/$SOURCE
+                                $INSTALL_ROOT/usr/bin/$SPELL
