--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2014-09-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.26 (devel)
+
 2014-08-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.25 (devel)
 
