--- a/devel/swig/HISTORY
+++ b/devel/swig/HISTORY
@@ -1,3 +1,8 @@
+2014-09-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0.2
+	* DEPENDS, *SUB_DEPENDS*: simplify some flags
+	  php4 is nolonger supported
+
 2013-12-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.11
 
