graphics/gimp: version 2.8.14

--- a/graphics/gimp/HISTORY
+++ b/graphics/gimp/HISTORY
@@ -1,3 +1,6 @@
+2014-09-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.8.14
+
 2013-12-21 Robin Cook <rcook@wyrms.net>
 	* PRE_BUILD: added to fix freetype2 header path
 
