graphics-libs/ftgl: make dependency on texlive optional

--- a/graphics-libs/ftgl/HISTORY
+++ b/graphics-libs/ftgl/HISTORY
@@ -1,5 +1,9 @@
+2014-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+	* DEPENDS: make the dependency on texlive optional
+
 2013-08-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	BUILD: add -lGL and -lGLU to LIBS
+	* BUILD: add -lGL and -lGLU to LIBS
 
 2012-10-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: added dependency on texlive, bzip2, libxext, zlib
