graphics/cinepaint: version 1.0-4

--- a/graphics/cinepaint/HISTORY
+++ b/graphics/cinepaint/HISTORY
@@ -1,3 +1,8 @@
+2014-09-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.0-4
+	* PRE_BUILD, cinepaint-missing-include.patch: removed
+	* DEPENDS: remove dependencies on automake and autoconf
+
 2012-10-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.3
 	* PRE_BUILD, cinepaint-missing-include.patch: add patch from
