--- a/utils/chrpath/HISTORY
+++ b/utils/chrpath/HISTORY
@@ -1,3 +1,6 @@
+2014-09-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.16
+
 2012-03-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: spell created
 
