calligra: add vc as optional dependency

--- a/kde4-apps/calligra/HISTORY
+++ b/kde4-apps/calligra/HISTORY
@@ -1,3 +1,6 @@
+2014-09-07 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: eigen2 needed for Krita and Sheets
+
 2013-03-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.6.2
 
