--- a/kde4-apps/calligra/HISTORY
+++ b/kde4-apps/calligra/HISTORY
@@ -1,5 +1,7 @@
 2014-09-07 Thomas Orgis <sobukus@sourcemage.org>
-	* DEPENDS: eigen2 needed for Krita and Sheets
+	* DEPENDS: eigen2 needed for Krita and Sheets, vc for SIMD
+	* CONFIGURE, BUILD: provide non-empty value for KTINY when not chosen,
+	  otherwise this choice is never remembered (sorcery bug or feature?)
 
 2013-03-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.6.2
