utils/direvent: new spell, directory event monitoring daemon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-07 Ladislav Hagara <hgr@vabo.cz>
+	* utils/direvent: new spell, directory event monitoring daemon
+
 2014-08-31  Ismael Luceno <ismael@sourcemage.org>
 	* devel/sdcc: new spell, Small Device C Compiler
 	* devel/mawk: new spell, Interpreter for the AWK Programming Language
