--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,6 @@
+2014-09-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.72
+
 2014-07-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.70
 
