--- a/shell-term-fm/mksh/HISTORY
+++ b/shell-term-fm/mksh/HISTORY
@@ -1,3 +1,6 @@
+2014-09-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to R50b
+
 2014-07-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to R50
 
