--- a/video-libs/libvpx/HISTORY
+++ b/video-libs/libvpx/HISTORY
@@ -1,3 +1,6 @@
+2014-09-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.3.0
+
 2013-12-01 Javier Vasquez <j.e.vasquez.v@gmail.com>
 	* DETAILS: 1.2.0
 	* BUILD: more build options
