seamonkey 2.29, SECURITY_PATCH=57

--- a/http/seamonkey/HISTORY
+++ b/http/seamonkey/HISTORY
@@ -1,3 +1,7 @@
+2014-09-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.29, SECURITY_PATCH=57
+	* DEPENDS: nss >= 3.16.2 is needed
+
 2013-09-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.21, SECURITY_PATCH=56
 	* DEPENDS: sqlite3 >= 3.7.17 is needed
