--- a/kde4-support/phonon/HISTORY
+++ b/kde4-support/phonon/HISTORY
@@ -1,3 +1,7 @@
+2014-09-09 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.8.0
+	* PRE_BUILD: removed
+
 2014-08-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.7.2, SOURCE_URL[0] updated
 
