--- a/x11-libs/cairo/HISTORY
+++ b/x11-libs/cairo/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing libxext
+
 2014-08-26 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: xextproto
 
