--- a/mail/courier-authlib/HISTORY
+++ b/mail/courier-authlib/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: libtool
+
 2011-03-27 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: version 0.63.0
 	* DEPENDS: removed non-existent configure flags
