--- a/ftp/curl/HISTORY
+++ b/ftp/curl/HISTORY
@@ -1,7 +1,10 @@
-2014-08-23  Treeve Jelbert <treeve@sourcemage.org>
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: gmp
+
+2014-08-23 Treeve Jelbert <treeve@sourcemage.org>
         * CONFIGURE, DEPENDS, BUILD: also support libressl, cleanup
 
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
         * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
