--- a/mail/fdm/HISTORY
+++ b/mail/fdm/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: pcre, SSL
+
 2013-06-05 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: version 1.7
 	* BUILD: now uses a configure
