firefox: added various missing dependencies

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: added various missing dependencies
+
 2014-09-03 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 32.0, SECURITY_PATCH=75
 	* PRE_BUILD, bug999496_change1f10a8067853.patch: patch removed
