--- a/net/stunnel/HISTORY
+++ b/net/stunnel/HISTORY
@@ -1,3 +1,6 @@
+2014-09-07 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 5.03
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
