*awk: Update HISTORY

--- a/devel/mawk/HISTORY
+++ b/devel/mawk/HISTORY
@@ -1,2 +1,5 @@
+2014-09-09 Ismael Luceno <ismael@sourcemage.org>
+	* PROVIDES: Provide AWK
+
 2014-08-31 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, DETAILS: spell created
