*awk: Let the user choose the primary AWK implementation

--- a/devel/mawk/HISTORY
+++ b/devel/mawk/HISTORY
@@ -1,5 +1,6 @@
 2014-09-09 Ismael Luceno <ismael@sourcemage.org>
 	* PROVIDES: Provide AWK
+	* CONFIGURE, INSTALL: Let the user choose the primary AWK implementation
 
 2014-08-31 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, DETAILS: spell created
