--- a/editors/gawk/HISTORY
+++ b/editors/gawk/HISTORY
@@ -1,5 +1,6 @@
 2014-09-09 Ismael Luceno <ismael@sourcemage.org>
 	* PROVIDES: Provide AWK
+	* CONFIGURE, INSTALL: Let the user choose the primary AWK implementation
 
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* BUILD: reduce usage of libraries to prevent failure of spell
