--- a/editors/gawk/INSTALL
+++ b/editors/gawk/INSTALL
@@ -1,3 +1,4 @@
 make DESTDIR=$INSTALL_ROOT install      &&
-rm  -f         ${INSTALL_ROOT}/bin/awk  &&
-ln  -sf  gawk  ${INSTALL_ROOT}/bin/awk
+if [ "$GAWK_DEF" = y ]; then
+  ln -sf "$SPELL" "$INSTALL_ROOT"/bin/awk
+fi
