--- a/editors/gawk/HISTORY
+++ b/editors/gawk/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: gmp, mpfr
+
 2014-09-09 Ismael Luceno <ismael@sourcemage.org>
 	* PROVIDES: Provide AWK
 
