--- a/gnome2-libs/gdk-pixbuf2/HISTORY
+++ b/gnome2-libs/gdk-pixbuf2/HISTORY
@@ -1,11 +1,14 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: libpthread-stubs
+
 2014-06-29 Treeve Jelbert <treeve@sourcemage.org>
-	*  DETAILS: version 2.30.8
+	* DETAILS: version 2.30.8
 
 2014-01-05 Treeve Jelbert <treeve@sourcemage.org>
-	*  DETAILS: version 2.30.2
+	* DETAILS: version 2.30.2
 
 2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
-	*  DETAILS: version 2.30.0
+	* DETAILS: version 2.30.0
 
 2013-05-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.28.1
