--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: icu
+
 2014-07-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.19.2
 
