--- a/devel/graphviz/HISTORY
+++ b/devel/graphviz/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: added missing dependencies
+
 2014-02-10 Tommy Boatman <tboatman@sourcemage.org>
 	* DETAILS: 2.36.0
 
