--- a/doc/groff/HISTORY
+++ b/doc/groff/HISTORY
@@ -1,3 +1,6 @@
+2014-09-09 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: optional X11 dependencies
+
 2013-08-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.22.2
 	* BUILD: deleted
