python-magic: new spell, File type identification using libmagic

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-09-09  Ismael Luceno <ismael@sourcemage.org>
+	* python-pypi/python-magic: new spell, File type identification using
+	  libmagic
+
 2014-09-07 Ladislav Hagara <hgr@vabo.cz>
 	* utils/direvent: new spell, directory event monitoring daemon
 
