bmake: new spell, Portable version of NetBSD make

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-10  Ismael Luceno <ismael@sourcemage.org>
+	* devel/bmake: new spell, Portable version of NetBSD make
+
 2014-09-09  Ismael Luceno <ismael@sourcemage.org>
 	* python-pypi/python-magic: new spell, File type identification using
 	  libmagic
