bmake: Fix system search path

--- a/devel/bmake/HISTORY
+++ b/devel/bmake/HISTORY
@@ -1,2 +1,5 @@
+2014-09-10 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Fix system search path
+
 2014-09-09 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, DETAILS, INSTALL: spell created
