runawk: new spell, Wrapper for AWK providing modules

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2014-09-10  Ismael Luceno <ismael@sourcemage.org>
+	* devel/runawk: new spell, Wrapper for AWK providing modules
 	* devel/mk-configure: new spell, Lightweight replacement for autotools
 	* devel/bmake: new spell, Portable version of NetBSD make
 
