squashfs-tools3: new spell, squashfs-tools 3.x

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20140911  Ismael Luceno <ismael@sourcemage.org>
+	* disk/squashfs-tools3: new spell, squashfs-tools 3.x
+
 2014-09-10  Ismael Luceno <ismael@sourcemage.org>
 	* devel/runawk: new spell, Wrapper for AWK providing modules
 	* devel/mk-configure: new spell, Lightweight replacement for autotools
