--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,6 @@
+2014-09-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.18.14
+
 2014-09-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.18.13
 	* CONFIGURE: removed obsolete options
