ChangeLog: Fix last entry date

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-20140911  Ismael Luceno <ismael@sourcemage.org>
+2014-09-11  Ismael Luceno <ismael@sourcemage.org>
 	* disk/squashfs-tools3: new spell, squashfs-tools 3.x
 
 2014-09-10  Ismael Luceno <ismael@sourcemage.org>
