byobu: new spell, text based window manager and terminal multiplexer

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2014-09-14  Ismael Luceno <ismael@sourcemage.org>
 	* shell-term-fm/abduco: new spell, session {at,de}tach support
+	* shell-term-fm/byobu: new spell, text based window manager and
+	  terminal multiplexer
 
 2014-09-11  Ismael Luceno <ismael@sourcemage.org>
 	* disk/squashfs-tools3: new spell, squashfs-tools 3.x
