cobra: new spell, Cobra Programming Language

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* shell-term-fm/abduco: new spell, session {at,de}tach support
 	* shell-term-fm/byobu: new spell, text based window manager and
 	  terminal multiplexer
+	* devel/cobra: new spell, Cobra Programming Language
 
 2014-09-11  Ismael Luceno <ismael@sourcemage.org>
 	* disk/squashfs-tools3: new spell, squashfs-tools 3.x
