vim-csapprox: new spell, Make gvim-only colorschemes work in terminal

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-09-15  Ismael Luceno <ismael@sourcemage.org>
+	* editors/vim-csapprox: new spell, Make gvim-only colorschemes work
+	  transparently in terminal vim
+
 2014-09-14  Ismael Luceno <ismael@sourcemage.org>
 	* shell-term-fm/abduco: new spell, session {at,de}tach support
 	* shell-term-fm/byobu: new spell, text based window manager and
