snappy: 1.1.2 and add git version

--- a/archive-libs/snappy/HISTORY
+++ b/archive-libs/snappy/HISTORY
@@ -1,2 +1,5 @@
+2014-09-15 Jeremy Blosser <jblosser@sourcemage.org>
+	* DETAILS, PREPARE, PRE_BUILD: 1.1.2 and add git version.
+
 2012-01-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: spell created, version 1.0.4
