--- a/latex/latex-beamer/INSTALL
+++ b/latex/latex-beamer/INSTALL
@@ -1,7 +1,10 @@
-mkdir -p ${INSTALL_ROOT}/usr/share/texmf/tex/latex/beamer &&
-mkdir -p ${INSTALL_ROOT}/usr/share/texmf/doc/beamer       &&
-cp -R ${SOURCE_DIRECTORY}/doc/* \
-      ${SOURCE_DIRECTORY}/{examples,solutions} \
-      ${INSTALL_ROOT}/usr/share/texmf/doc/beamer
-cp -R ${SOURCE_DIRECTORY}/{base,themes,emulation,extensions} \
-	$INSTALL_ROOT/usr/share/texmf/tex/latex/beamer
+mkdir -p "$INSTALL_ROOT"/usr/share/texmf/tex/latex/beamer &&
+mkdir -p "$INSTALL_ROOT"/usr/share/texmf/doc/beamer       &&
+mkdir -p "$INSTALL_ROOT"/usr/share/emacs/site-lisp        &&
+cp -R "$SOURCE_DIRECTORY"/emacs/* \
+      "$INSTALL_ROOT"/usr/share/emacs/site-lisp           &&
+cp -R "$SOURCE_DIRECTORY"/doc/* \
+      "$SOURCE_DIRECTORY"/{examples,solutions} \
+      "$INSTALL_ROOT"/usr/share/texmf/doc/beamer          &&
+cp -R "$SOURCE_DIRECTORY"/base \
+	"$INSTALL_ROOT"/usr/share/texmf/tex/latex/beamer
