--- a/latex/latex-beamer/HISTORY
+++ b/latex/latex-beamer/HISTORY
@@ -1,3 +1,7 @@
+2014-09-15 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 3.33
+
 2009-09-24 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
 	 * DEPENDS: switch from tetex to texlive [auto]
 
