--- a/editors/texworks/HISTORY
+++ b/editors/texworks/HISTORY
@@ -1,3 +1,6 @@
+2014-09-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.4.5-r1281
+
 2012-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, DEPENDS, DETAILS: spell created
 	* DEPENDS: add dependency on texlive
