irrlicht: new spell, high performance realtime 3D engine

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-09-15 Jeremy Blosser <jblosser@sourcemage.org>
 	* database/leveldb: new spell, fast key-value storage library by Google
+	* graphics/irrlicht: new spell, high performance realtime 3D engine
 
 2014-09-15  Ismael Luceno <ismael@sourcemage.org>
 	* editors/vim-csapprox: new spell, Make gvim-only colorschemes work
