--- a/editors/texmaker/HISTORY
+++ b/editors/texmaker/HISTORY
@@ -1,3 +1,6 @@
+2014-09-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4.3
+
 2014-04-29 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 4.1.1
 
