elfkickers: new spell, Kickers of ELF

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-16  Ismael Luceno <ismael@sourcemage.org>
+	* devel/elfkickers: new spell, Kickers of ELF
+
 2014-09-15 Jeremy Blosser <jblosser@sourcemage.org>
 	* database/leveldb: new spell, fast key-value storage library by Google
 	* graphics/irrlicht: new spell, high performance realtime 3D engine
