irrlicht: move to games grimoire

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-18 Jeremy Blosser <jblosser@sourcemage.org>
+	* graphics/irrlicht: move spell to games grimoire
+
 2014-09-17  Ismael Luceno <ismael@sourcemage.org>
 	* net/corkscrew: new spell, tool for tunneling SSH through HTTP
 	  proxies
