xorg-xserver/xorg-server: fixed GLAMOR subdependency

--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2014-09-18 Pol Vinogradov <vin.public@gmail.com>
+	* PRE_SUB_DEPENDS, REPAIR*SUB_DEPENDS: fixed GLAMOR subdependency
+
 2014-08-27 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: really needs mesalib-1x ... so actually the old mesalib
 	  spell is obsolete, what's the plan?
