mesalib-1x - fix find_list usage

--- a/graphics-libs/mesalib-1x/HISTORY
+++ b/graphics-libs/mesalib-1x/HISTORY
@@ -1,3 +1,6 @@
+2014-09-19 Treeve Jelbert <treeve@sourcemage.org>
+	* SUB_DEPENDS, PRE_SUB_DEPENDS,DEPENDS: fix list_find usage
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* BUILD, CONFIGURE: Change driver selection and make this beast build.
 	  It is not perfect, but results in a working build including r600 and
