doc/evince: version 3.13.92

--- a/doc/evince/HISTORY
+++ b/doc/evince/HISTORY
@@ -1,3 +1,7 @@
+2014-09-19 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: 3.13.92
+	* DEPENDS: adwaita icons replaced symbolic ones
+
 2014-04-18 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: need symbolic icons
 
