python-pypi/grit-i18n added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-09-21  Treeve Jelbert <treeve@sourcemage.org>
 	* move xdg-user-dirs to utils
+	* python-pypi/grit-i18n: added
 
 2014-09-19 Pol Vinogradov <vin.public@gmail.com>
 	* gnome3-libs/adwaita-icon-theme: new spell, Adwaita icon theme for GNOME
