make: Install gmake symlink

--- a/devel/make/HISTORY
+++ b/devel/make/HISTORY
@@ -1,3 +1,6 @@
+2014-09-23 Ismael Luceno <ismael@sourcemage.org>
+	* INSTALL: Install gmake symlink
+
 2013-10-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional guile
 
