chat-im/pidgin-window-merge: new spell, one window plugin for Pidgin

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-23 Pol Vinogradov <vin.public@gmail.com>
+	* chat-im/pidgin-window-merge: new spell, one window plugin for Pidgin
+
 2014-09-23  Ismael Luceno <ismael@sourcemage.org>
 	* editors/vbindiff: new spell, Visual Binary Diff
 
