lxc: new spell, Userspace tools for the Linux kernel containers

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-25 Ismael Luceno <ismael@sourcemage.org>
+	* utils/lxc: new spell, Userspace tools for the Linux kernel containers
+
 2014-09-23 Pol Vinogradov <vin.public@gmail.com>
 	* chat-im/pidgin-window-merge: new spell, one window plugin for Pidgin
 
