--- a/chat-irc/hexchat/HISTORY
+++ b/chat-irc/hexchat/HISTORY
@@ -1,5 +1,14 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-09-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.10.1; converted to upstream signature
+	  checking; cleaned up
+	* DEPENDS, CONFIGURE: rewritten
+	* PRE_BUILD: dropped
+	* INSTALL: corrected plugin header path
+	* hexchat.gpg: added, 0DE76DFC public key (TingPing
+	  <tingping@fedoraproject.org>) imported
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2012-09-09 Robin Cook <rcook@wyrms.net>
 	* New Spell: DETAILS, CONFIGURE, DEPENDS, PRE_BUILD, BUILD, INSTALL
