--- a/chat-irc/hexchat/INSTALL
+++ b/chat-irc/hexchat/INSTALL
@@ -1,3 +1,4 @@
-install -vm 644 plugins/xchat-plugin.h "$INSTALL_ROOT/usr/include" &&
+# actually it's false
+make UPDATE_MIME_DATABASE=true install &&
 
-default_install
+install -vm 644 "src/common/hexchat-plugin.h" "$INSTALL_ROOT/usr/include"
