--- a/science-libs/vtk/HISTORY
+++ b/science-libs/vtk/HISTORY
@@ -1,3 +1,9 @@
+2014-09-25 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE, SOURCE_DIRECTORY, WEB_SITE and LICENSE
+	  Disabled building examples
+	  Remove -ffast-math CFLAG (makes internal sqlite build fail)
+	  updated spell to 6.1.0
+
 2012-10-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.10.0
 
