libxi: added missing dependencies

--- a/xorg-lib/libxi/HISTORY
+++ b/xorg-lib/libxi/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing dependencies
+
 2011-03-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.2
 
