pidgin-sipe: added missing dependencies

--- a/chat-im/pidgin-sipe/HISTORY
+++ b/chat-im/pidgin-sipe/HISTORY
@@ -1,2 +1,5 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing depends
+
 2013-06-12 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS, DEPENDS: new spell
