--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.16.1
+
 2014-09-18 Pol Vinogradov <vin.public@gmail.com>
 	* PRE_SUB_DEPENDS, REPAIR*SUB_DEPENDS: fixed GLAMOR subdependency
 
