rename mesalib-1x => mesalib

--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,7 @@
+2014-09-25 Treeve Jelbert <treeve@sourcemage.org>
+	* rename spell => mesalib
+	* UP_TRIGGERS: added, detect old mesalib libraries
+
 2014-09-19 Treeve Jelbert <treeve@sourcemage.org>
 	* SUB_DEPENDS, PRE_SUB_DEPENDS,DEPENDS: fix list_find usage
 
