--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
 	* mesalib: deleted, this is now obsolete, as xorg-srver requires mesalib-1x
+	* rename mesalib-1x => mesalib
 
 2014-09-25 Ismael Luceno <ismael@sourcemage.org>
 	* utils/lxc: new spell, Userspace tools for the Linux kernel containers
