vtk: Replace custom code by cmake_build

--- a/science-libs/vtk/HISTORY
+++ b/science-libs/vtk/HISTORY
@@ -3,6 +3,7 @@
 	  Disabled building examples
 	  Remove -ffast-math CFLAG (makes internal sqlite build fail)
 	  updated spell to 6.1.0
+	* BUILD, DEPENDS: Replace custom code by cmake_build
 
 2012-10-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.10.0
