--- a/net/monit/HISTORY
+++ b/net/monit/HISTORY
@@ -1,5 +1,8 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-09-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.9
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-05-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.8.1
