shell-term-fm/bash: replace unofficial patch for CVE 2014 7169 with the upstream patch

--- a/shell-term-fm/bash/HISTORY
+++ b/shell-term-fm/bash/HISTORY
@@ -1,3 +1,7 @@
+2014-09-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, CVE-2014-7169.diff: remove unofficial patch
+	* DETAILS, patches/bash43-026 add upstream fix for CVE 2014 7169
+
 2014-09-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: SECURITY_PATCH++
 	* PRE_BUILD, CVE-2014-7169.diff: fix CVE 2014 7169
