--- a/database/mariadb/HISTORY
+++ b/database/mariadb/HISTORY
@@ -1,7 +1,9 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-09-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.5.39 (5.5 branch)
+	* BUILD: corrected man path for 5.5 branch
 
-        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-06-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.5.38 (5.5 branch)
