xorg-driver/xf86-video-ati: fixed mesalib with DRI request in DEPENDS, some cleanup

--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,7 @@
+2014-09-27 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: simplified mesalib with DRI request, removed merge
+	  marks crap
+
 2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: MESALIB => mesalib
 
