--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,6 @@
+2014-09-28 Jeremy Blosser <jblosser@sourcemage.org>
+	* DETAILS: version 4.8.3
+
 2013-10-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.8.2
 
