shell-term-fm/bash: another patch against the ShellShock issues, security update (cherry picked from commit 598d3d28572b29ea4634e7c3db6b1a5e9d368aeb)

--- a/shell-term-fm/bash/HISTORY
+++ b/shell-term-fm/bash/HISTORY
@@ -1,3 +1,7 @@
+2014-09-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, patches/bash43-027: add the latest patch against ShellShock
+	  issues; SECURITY_PATCH++
+
 2014-09-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, CVE-2014-7169.diff: remove unofficial patch
 	* DETAILS, patches/bash43-026 add upstream fix for CVE 2014 7169
