megatools: new spell, command line client for mega.co.nz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-29 Vlad Glagolev <stealth@sourcemage.org>
+	* net/megatools: new spell, command line client for mega.co.nz
+
 2014-09-25 Ismael Luceno <ismael@sourcemage.org>
 	* utils/lxc: new spell, Userspace tools for the Linux kernel containers
 	* graphics/dcmtk: new spell, DICOM Toolkit
