--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,3 +1,6 @@
+2014-09-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.4.58
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
        * SUB_DEPENDS, PRE_SUB_DEPENDS: support NV and NOUVEAU, both in field
          use:-/
