--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-09-29 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.16.3
+	* info/patches/maintenance_patches_3/patch-3.16.3: added
+
 2014-09-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/kernels/3.16.2, latest.defaults,
 	  info/patches/maintenance_patches_3/patch-3.16.2: version 3.16.2
